--- a/package.json
+++ b/package.json
@@ -20,30 +20,33 @@
   },
   "dependencies": {
     "microplugin": "0.0.3",
-    "sifter": "^0.4.0"
+    "sifter": "^0.5.4"
   },
   "devDependencies": {
-    "grunt": "0.4.x",
-    "grunt-bower-task": "^0.4.0",
-    "grunt-cli": "^0.1.13",
-    "grunt-contrib-clean": "0.5.x",
-    "grunt-contrib-concat": "0.3.x",
-    "grunt-contrib-copy": "0.4.x",
-    "grunt-contrib-less": "~0.9.0",
-    "grunt-contrib-uglify": "0.2.x",
-    "grunt-recess": "0.5.x",
-    "grunt-replace": "0.4.x",
-    "karma": "^0.12.31",
+    "grunt": "^1.3.0",
+    "grunt-bower-task": "^0.5.0",
+    "grunt-cli": "^1.3.2",
+    "grunt-contrib-clean": "^2.0.0",
+    "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-less": "^2.0.0",
+    "grunt-contrib-uglify": "^5.0.0",
+    "grunt-recess": "^1.0.1",
+    "grunt-replace": "^1.0.1",
+    "karma": "^5.1.1",
     "karma-chai": "^0.1.0",
-    "karma-chrome-launcher": "^0.1.7",
-    "karma-coverage": "^0.2.7",
-    "karma-coveralls": "^0.1.5",
-    "karma-firefox-launcher": "^0.1.4",
-    "karma-mocha": "^0.1.10",
-    "karma-mocha-reporter": "^0.3.1",
-    "karma-phantomjs-launcher": "^0.1.4",
-    "karma-safari-launcher": "^0.1.1",
-    "karma-sauce-launcher": "^0.2.10"
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-coverage": "^2.0.3",
+    "karma-coveralls": "^2.1.0",
+    "karma-firefox-launcher": "^1.3.0",
+    "karma-mocha": "^2.0.1",
+    "karma-mocha-reporter": "^2.2.5",
+    "karma-phantomjs-launcher": "^1.0.4",
+    "karma-safari-launcher": "^1.0.0",
+    "karma-sauce-launcher": "^4.1.5"
+  },
+  "optionalDependencies": {
+    "fsevents": "^2.1.3"
   },
   "scripts": {
     "test": "./node_modules/karma/bin/karma start"
